--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
-spring.application.name=demo
-spring.datasource.url=jdbc:postgresql://dpg-crorgplumphs73f7t580-a.oregon-postgres.render.com:5432/atividade_4_aos
-spring.datasource.username=atividade_4_aos_user
-spring.datasource.password=EJxvNrvBuBsD0eEraoinUt83lsInzODl
+spring.application.name=curriculum
+spring.datasource.url=jdbc:postgresql://dpg-csn8qsd6l47c73brf41g-a.oregon-postgres.render.com:5432/atividade_4_aos_wdk0
+spring.datasource.username=atividade_4_aos_wdk0_user
+spring.datasource.password=hItDgGvUOnBgKnbV4ZBPGiZTRnkUkgpM
 spring.jpa.hibernate.ddl-auto=update
